# GoHighLevel-MCP

./: .env.example  .gitignore  .mcp.json  INSTALL.md  README.md  install_mac.sh  install_windows.ps1  pyproject.toml  requirements.txt  server.py
docs/: ARCHITECTURE.md  MIGRATION.md  TOOLS.md
ghl_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  formatters.py  models.py  oauth.py  pagination.py  server.py
ghl_mcp/tools/: __init__.py  appointments.py  calendars.py  companies.py  contacts.py  conversations.py  custom_fields.py  forms.py  funnels.py  locations.py  messaging.py  opportunities.py  pipelines.py  saas.py  snapshots.py  tags.py  users.py  webhooks.py  workflows.py
scripts/: discover_locations.py  find_location.sh  gen_tools_doc.py
tests/: eval.xml  test_client.py  test_config.py  test_imports.py  test_tools.py
