[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghl_mcp"
version = "2.0.0"
description = "Production-grade Model Context Protocol server for GoHighLevel CRM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Scott Nailon"}
]
keywords = ["mcp", "gohighlevel", "ghl", "crm", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[project.scripts]
ghl-mcp = "ghl_mcp.__main__:main"

[project.urls]
Homepage = "https://profitplatform.com.au"
Repository = "https://github.com/scottnailon/GoHighLevel-MCP"

[tool.setuptools.packages.find]
include = ["ghl_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]
